# crabC2

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
src/server/: api.rs  crypto.rs  db.rs  events.rs  machine_db.rs  main.rs  payload_db.rs  rev_shell_handler.rs  rev_shell_handler.rs.back  server.rs  user_db.rs
templates/: 404.html  blank.html  docs.html  index.html  init.html  machines.html  payload.html  shell.html  task-event.html
templates/assets/css/: styles.min.css
vacances/photos/: crabec2.ps1  crabec2.sh  crabec2RK.sh
